gcc/testsuite/rust/rustc/ui/async-await/async-fn/trait-bounds-in-macro.rs
// { dg-additional-options "-frust-edition= 2021" }

macro_rules! x {
    ($x:item) => {}
}

x! {
    async fn foo() -> impl async Fn() { }
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

fn main() {}

